--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "techdegree-fullstackjs-rest-api",
+  "name": "rest-api-sql",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
