--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,15 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "remotelearners-restapi.db",
-    "host": "127.0.0.1",
-    "dialect": "sqlite"
+    "dialect": "sqlite",
+    "storage": "remote-learners.db"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "remote-learners.db"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "remote-learners.db"
   }
 }
 
